syntax = "proto3";

package mobility.services;

service FlightServices {
    rpc ListFlights(ListFlightsRequest) returns (ListFlightsResponse) {}

    rpc GetFlight(GetFlightRequest) returns (GetFlightResponse) {}

    rpc CreateFlight(CreateFlightRequest) returns (CreateFlightResponse) {}

    rpc UpdateFlight(UpdateFlightRequest) returns (UpdateFlightResponse) {}

    rpc DeleteFlight(DeleteFlightRequest) returns (DeleteFlightResponse) {}

    rpc FinishFlight(FinishFlightRequest) returns (FinishFlightResponse) {}

    rpc RetrieveCurrentFlightLocation(RetrieveCurrentFlightLocationRequest) returns (RetrieveCurrentFlightLocationResponse) {}

    rpc RetrieveCurrentFlightEnergyUsage(RetrieveCurrentFlightEnergyUsageRequest) returns (RetrieveCurrentFlightEnergyUsageResponse) {}

    rpc RetrieveCurrentFlightDistanceCovered(RetrieveCurrentFlightDistanceCoveredRequest) returns (RetrieveCurrentFlightDistanceCoveredResponse) {}

    rpc RetrieveCurrentFlightCashAmount(RetrieveCurrentFlightCashAmountRequest) returns (RetrieveCurrentFlightCashAmountResponse) {}

    rpc RetrieveFinalFlightLocation(RetrieveFinalFlightLocationRequest) returns (RetrieveFinalFlightLocationResponse) {}

    rpc RetrieveFinalFlightEnergyUsage(RetrieveFinalFlightEnergyUsageRequest) returns (RetrieveFinalFlightEnergyUsageResponse) {}

    rpc RetrieveFinalFlightDistanceCovered(RetrieveFinalFlightDistanceCoveredRequest) returns (RetrieveFinalFlightDistanceCoveredResponse) {}

    rpc RetrieveFinalFlightCashAmount(RetrieveFinalFlightCashAmountRequest) returns (RetrieveFinalFlightCashAmountResponse) {}

    rpc RetrieveNearestStationToFlight(RetrieveNearestStationToFlightRequest) returns (RetrieveNearestStationToFlightResponse) {}
}

message Flight {
    string flight_id = 1;
    string battery_id = 2;
    string initiating_station_id = 3;
    string finishing_station_id = 4;
    string initiating_operator_id = 5;
    string finishing_operator_id = 6;
    string motorcycle_id = 7;
    string driver_id = 8;
    string started_at = 9;
    string ended_at = 10;
    string status = 11;
    string current_location_id = 12;
    string current_energy_id = 13;
    string current_distance_id = 14;
    string current_flight_amount_id = 15;
    string final_location_id = 16;
    string final_energy_id = 17;
    string final_distance_id = 18;
    string final_flight_amount_id = 19;
}

message FlightsList {
    repeated Flight flights = 1;
}

message Success {
    string content = 1;
    string type = 2;
}

message Error {
    repeated string content = 1;
    string type = 2;
}

message ListFlightsRequest {
    int32 page_size = 1;
}

message ListFlightsResponse {
    bool successful = 1;
    oneof result {
        Error error = 2;
        FlightsList flights_list = 3;
    }
}

message GetFlightRequest {
    string flight_id = 1;
}

message GetFlightResponse {
    bool successful = 1;
    oneof result {
        Error error = 2;
        Flight flight = 3;
    }
}

message CreateFlightRequest {
    Flight flight = 1;
}

message CreateFlightResponse {
    bool successful = 1;
    oneof result {
        Error error = 2;
        Flight flight = 3;
    }
}

message UpdateFlightRequest {
    Flight flight = 1;
}

message UpdateFlightResponse {
    bool successful = 1;
    oneof result {
        Error error = 2;
        Flight flight = 3;
    }
}

message DeleteFlightRequest {
    string flight_id = 1;
}

message DeleteFlightResponse {
    bool successful = 1;
    oneof result {
        Error error = 2;
        Success success = 3;
    }
}

message FinishFlightRequest {
    string flight_id = 1;
}

message FinishFlightResponse {
    bool successful = 1;
    oneof result {
        Error error = 2;
        Success success = 3;
    }
}

message RetrieveCurrentFlightLocationRequest {
    string flight_id = 1;
}

message RetrieveCurrentFlightLocationResponse {
    bool successful = 1;
    oneof result {
        Error error = 2;
        string current_location_id = 3;
    }
}

message RetrieveCurrentFlightEnergyUsageRequest {
    string flight_id = 1;
}

message RetrieveCurrentFlightEnergyUsageResponse {
    bool successful = 1;
    oneof result {
        Error error = 2;
        string current_energy_id = 3;
    }
}

message RetrieveCurrentFlightDistanceCoveredRequest {
    string flight_id = 1;
}

message RetrieveCurrentFlightDistanceCoveredResponse {
    bool successful = 1;
    oneof result {
        Error error = 2;
        string current_distance_id = 3;
    }
}

message RetrieveCurrentFlightCashAmountRequest {
    string flight_id = 1;
}

message RetrieveCurrentFlightCashAmountResponse {
    bool successful = 1;
    oneof result {
        Error error = 2;
        string current_flight_amount_id = 3;
    }
}

message RetrieveFinalFlightLocationRequest {
    string flight_id = 1;
}

message RetrieveFinalFlightLocationResponse {
    bool successful = 1;
    oneof result {
        Error error = 2;
        string final_location_id = 3;
    }
}

message RetrieveFinalFlightEnergyUsageRequest {
    string flight_id = 1;
}

message RetrieveFinalFlightEnergyUsageResponse {
    bool successful = 1;
    oneof result {
        Error error = 2;
        string final_energy_id = 3;
    }
}

message RetrieveFinalFlightDistanceCoveredRequest {
    string flight_id = 1;
}

message RetrieveFinalFlightDistanceCoveredResponse {
    bool successful = 1;
    oneof result {
        Error error = 2;
        string final_distance_id = 3;
    }
}

message RetrieveFinalFlightCashAmountRequest {
    string flight_id = 1;
}

message RetrieveFinalFlightCashAmountResponse {
    bool successful = 1;
    oneof result {
        Error error = 2;
        string final_flight_amount_id = 3;
    }
}

message RetrieveNearestStationToFlightRequest {
    string flight_id = 1;
}

message RetrieveNearestStationToFlightResponse {
    bool successful = 1;
    oneof result {
        Error error = 2;
        string station_id = 3;
    }
}
